--- a/index.html
+++ b/index.html
@@ -6,31 +6,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="clock.css">
-    <title>Anolog Clock</title>
+    <title>Analog Clock</title>
 </head>
 
 <body>
     <div class="clock">
-        
-        <div class="dot"></div>
-
-        <div class="number">
-            <div class="h1">XII</div>
-            <div class="h2">III</div>
-            <div class="h3">VI</div>
-            <div class="h4">IX</div>
+        <div class="num num1">
+            <div>I</div>
+        </div>
+        <div class="num num2">
+            <div>II</div>
+        </div>
+        <div class="num num3">
+            <div>III</div>
+        </div>
+        <div class="num num4">
+            <div>IV</div>
+        </div>
+        <div class="num num5">
+            <div>V</div>
+        </div>
+        <div class="num num6">
+            <div>VI</div>
+        </div>
+        <div class="num num7">
+            <div>VII</div>
+        </div>
+        <div class="num num8">
+            <div>VIII</div>
+        </div>
+        <div class="num num9">
+            <div>IX</div>
+        </div>
+        <div class="num num10">
+            <div>X</div>
+        </div>
+        <div class="num num11">
+            <div>XI</div>
+        </div>
+        <div class="num num12">
+            <div>XII</div>
         </div>
 
-        <div>
-            <div class="hour-hand"></div>
-            <div class="minute-hand"></div>
-            <div class="second-hand"></div>
+        <div class="hand" id="second">
+            <div class="second"></div>
+        </div>
+        <div class="hand" id="minute">
+            <div class="minute"></div>
+        </div>
+        <div class="hand" id="hour">
+            <div class="hour"></div>
         </div>
 
-        <div class="diallines"></div>
-    </div>
 
-    <script src="clock.js"></script>
+
+
+
+
+        <script src="clock.js"></script>
 </body>
 
 </html>
