--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <div class="num num12">
             <div>XII</div>
         </div>
+        <div class="dot"></div>
+        <div class="text"></div>
+        <div>ROLEX</div>
 
         <div class="hand" id="second">
             <div class="second"></div>
